- Generate access methods for unknown OIDs in DNs at runtime
- Add extractCSR method to get CSR in binary or PEM
- subjectPublicKey option to extract in PEM format
- Convert IP addresses to strings
- Convert basicConstraints to string
- Add registerOID to allow extraction of simple custom OIDs
- More tests
- Improve documentation
- Add setAPIversion, regularize OID names in V1
- For API V1, attributes method returns names or values of attributes (except extensions)
- Improve build: Use Dist::Zilla, autogenerate README,LICENE,META,Makefile.PL
- Generate & ship Commitlog from git

1.4_02

- For API V1, omit space in key usage list
- Look for policy identifier names in all tables
- Decode certificatePolicyIdentifier, add related OIDs
- Avoid building un-necessary ASN.1 parsers
- Fully decode ApplicationCertPolicies for API V1
- Check enhanced key usage before registering OID
- Add name2oid to API
- Internal cleanup  & error reporting improvements

1.4_03

- certificateTemplate ASN correction: MajorVersion is optional
- certificateTemplate return id as a name if OID registered (API V1)
- handle some malformed requests better
- decode more M$ attributes, correct some.
- Don't croak() on missing attributes
- Convert BMPStrings from UCS2 to Perl (printable) strings
- Rework special OID handling to be scalable & cover attributes
- Don't croak in new.  (API V1) Always return undef.  Class method error() returns detail.
- Return reasonable strings from attributes('name') and extensionValue('name',1)
- Overload object so print can produce a useful dump.
- Handle null subject
- More enhanced key usage OIDs
- keyUsage returns array rather than comma separated string (API v1)
- Cleaned up POD
- Do a better job with error reporting
- Validate PEM's Base64 encoding.
- Ensure that only the first PEM certificate is extracted.
- Improve tests
- Enable (internal) custom formatters for extensions and attributes.
- Return basicConstraints as a hash